# pfc-blocks

./: .gitignore  COMPATIBILITY_SHIM_SUMMARY.md
cpp/helloffft/: CMakeLists.txt  main.cpp
docs/: plotlysample.html
docs/LS2-wafer/: n.html  nA.html  nB.html
fortran/: activePFC2D_smectics_boundaryV.F03  phase_diagram_pfc2D.F95
fortran/bampl2d/: bampl2D_AB.F03
python/: env-test.ipynb
python/.1-kernels/: help.ipynb
python/.2-memory/: help.ipynb
python/.5-cooperative-groups/: help.ipynb
python/.examples/: 1D-heat-equation.ipynb  numba-sum-vector.ipynb  numba-vector-addition.ipynb
python/.tests/zf-noise05/: profiles.ipynb
python/.z-playground/: 1.ipynb  2.fft-derivative.ipynb  4.class-member-types.ipynb  5.animation.ipynb  server.py  test.html
python/non-pfc-models/hard-spheres/: hard-spheres-betas.ipynb  hard-spheres-sim-01-t100-2D.ipynb  hard_spheres.py
python/pfc-models/bamp-zf-1d/: bampl1D_AB-hacked.F03  bampl1D_AB.F03  debug-pfc-1d.ipynb  pfc1d.py
python/pfc-models/bamp-zf-2d/: debug-pfc2d.ipynb  pfc2d.py
python/pfc-models/binary-crystal-2d/: exp-gamma-zz-ac.ipynb  pfc2d.py  pfc2d_v2.py  test-pfc2d-theta00-nx-395_400.ipynb
python/pfc-models/ln-vacancy/: PFC2D_Vacancy.py  PFC2D_Vacancy_CPU.py  pfc.py  prospectus-log-v-std-energywell.ipynb  prospectus-sl copy.ipynb  prospectus-sl thermal.ipynb  prospectus-sl-rand.ipynb  prospectus-sl.ipynb  prospectus-sl90.ipynb  prospectus.ipynb  prospectusCorr.ipynb  prospectusTSHframes.bk.ipynb  prospectusTSHphases.ipynb  prospectusVacancy.ipynb  test.PFC2D_Vacancy.ipynb  vacancy-model.ipynb
(+66 files in other folders)
